welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: not found: type c
def FaireCoin(Color:c) {
                    ^PatternPicture:2: error: not found: value c
  setCouleurBrosse(c)
                   ^PatternPicture:18: error: not found: type RED
  FaireCoin(Color:RED)
                  ^PatternPicture:18: error: object java.awt.Color is not a value
  FaireCoin(Color:RED)
            ^PatternPicture:19: error: not found: type BLUE
  FaireCoin(Color:BLUE)
                  ^PatternPicture:19: error: object java.awt.Color is not a value
  FaireCoin(Color:BLUE)
            ^PatternPicture:20: error: not found: type GREEN
  FaireCoin(Color:GREEN)
                  ^PatternPicture:20: error: object java.awt.Color is not a value
  FaireCoin(Color:GREEN)
            ^PatternPicture:21: error: not found: type YELLOW
  FaireCoin(Color:YELLOW)
                  ^PatternPicture:21: error: object java.awt.Color is not a value
  FaireCoin(Color:YELLOW)
            ^